# scoreboard

./: .env.example  .gitignore  Dockerfile  Dockerfile.migration  README.md  alembic.ini  docker-compose.test-kafka.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_07_09_0055-b70581b0351b_initial.py
app/: Dockerfile  __init__.py  dependencies.py  main.py  pyproject.toml
app/api/: __init__.py  guild.py  health.py  user.py  war_result.py
app/config/: preferences.py  telemetry.py
app/database/: database.py
app/database/models/: guild.py  player.py  user.py  war_result.py
app/lib/: filter.py  multisort.py  rattrs.py  specifications.py  wrap_field.py
app/lib/exceptions/: abc.py  filter.py
app/repositories/: guild.py  user.py  war_result.py
app/schemas/: bases.py  guild.py  pagination.py  user.py  war_result.py
app/services/: __init__.py
app/services/guild/: __init__.py  read.py
app/services/user/: __init__.py  read.py
app/services/war_result/: __init__.py  read.py
broker/: Dockerfile  pyproject.toml  requirements.txt
broker/config/: logger.py  preferences.py  telemetry.py
broker/consumers/: core_consumer.py  guild_consumer.py  shop_consumer.py  user_consumer.py
broker/enums/: match.py
broker/producers/: guild_war_produser.py
broker/schemas/guild/: guild_create.py  guild_delete.py  guild_member_change.py  guild_war.py
broker/schemas/match/: base.py  custom.py  guild_war.py  guild_war_respone.py  match_experience.py  match_rating.py  random.py  ranked.py
broker/schemas/shop/: action_chest_open.py
broker/schemas/user/: currencies.py  currency_change.py  new_user.py  username_change.py
broker/workers/: core_worker.py  guild_worker.py  shop_worker.py  user_worker.py
scoreboard-api-client/: README.md  pyproject.toml
scoreboard-api-client/scoreboard_api_client/: __init__.py
scoreboard-api-client/scoreboard_api_client/api/guild/: get_guilds.py
scoreboard-api-client/scoreboard_api_client/api/users/: get_users.py
scoreboard-api-client/scoreboard_api_client/models/: __init__.py  guild_pagination_response.py  guild_schema.py  order_by_type.py  user_pagination_response.py  user_schema.py
shared/: alembic.ini  pyproject.toml
shared/config/: preferences.py
shared/database/: database.py
shared/database/models/: __init__.py  guild.py  player.py  user.py  war_result.py
shared/migrations/: env.py
shared/migrations/versions/: 1de6ba5b2735_initial.py  2025_07_09_0055-b70581b0351b_initial.py
shared/repositories/: guild.py  shop_repository.py  user.py  user_repository.py  war_result.py
shared/schemas/: user.py
