[project]
name = "scoreboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyfa-converter-v2>=2.0.0rc1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "openapi-python-client>=0.25.2",
    "pytest>=8.4.1",
]

[tool.isort]
profile = "black"
line_length = 88
atomic = true

[tool.ruff]
target-version = "py312"
line-length = 88
