[project]
name = "scoreboard-workspace"
version = "0.1.0"
description = "Scoreboard application workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.isort]
profile = "black"
line_length = 88
atomic = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.uv.workspace]
members = [
    "app",
    "shared",
    "broker",
]