[project]
name = "scoreboard-workspace"
version = "1.0.0"
description = "Scoreboard application workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.isort]
profile = "black"
line_length = 88
atomic = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.uv.workspace]
members = [
    "app",
    "shared",
    "broker",
]