[project]
name = "shared"
version = "0.1.0"
description = "Shared database models and utilities"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "dotenv>=0.9.9",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-instrumentation-asyncpg>=0.55b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.55b1",
    "opentelemetry-sdk>=1.34.1",
    "alembic>=1.16.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
